# Rust-FFI

./: Cargo.toml
c/src/: main.c
cinrust/: Cargo.toml  build.rs
cinrust/c/: build.bat
cinrust/c/src/: lib.cpp  lib.h
cinrust/src/: counter.rs  main.rs
cinrust/src/win32/: mod.rs
cinrust/src/window/: mod.rs
rustinc/: Cargo.toml
rustinc/c/: build.bat
rustinc/src/: lib.rs
win32lib/: Cargo.toml  build.rs
win32lib/src/: lib.rs  macros.rs
win32lib/src/shared/: basetsd.rs  dxgi.rs  dxgi1_2.rs  dxgi1_3.rs  dxgi1_4.rs  dxgicommon.rs  dxgiformat.rs  dxgitype.rs  guiddef.h  guiddef.rs  minwindef.rs  mod.rs  windef.rs  winerror.rs
win32lib/src/um/: d3d12.rs  d3dcommon.rs  errhandlingapi.rs  mod.rs  unknwn.rs  wingdi.rs  winnt.rs  winuser.rs
window/: Cargo.toml
window/src/: lib.rs
window/src/win32/: mod.rs
window_test/: #Cargo.toml#  Cargo.toml
window_test/src/: main.rs  win32_window.rs
window_test/src/window/: mod.rs
