[package]
name = "window_test"
version = "0.1.0"
authors = ["Niels Bross <niels@glitchheart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
window = { path = "../window" }
win32lib = { path = "../win32lib" }

